--- a/operations.html
+++ b/operations.html
@@ -14,7 +14,17 @@ function operaciones(op)
 
         restar: function restarNumeros(n1, n2) {
             return (parseInt(n1) - parseInt(n2));
+        },
+ 
+        multiplicar: function multiplicarNumeros(n1, n2) {
+            return (parseInt(n1) * parseInt(n2));
+        },
+
+        dividir: function dividirNumeros(n1, n2) {
+            return (parseInt(n1) / parseInt(n2));
         }
+      
+        
     };
 
 
@@ -44,6 +54,12 @@ function operaciones(op)
                 var resultado = ops.restar(num1, num2);
                 alert (resultado);
                 break;
+            case 'multiplicar':
+                var resultado = ops.multiplicar(num1, num2);
+                break;
+            case 'dividir':
+                var resultado= ops.dividir(num1, num2);
+                break;
         }
     }
 
@@ -62,6 +78,8 @@ function operaciones(op)
     <br /><br />
     <input type="button" value="SUMAR" onclick="operaciones('sumar'); return false;" /><br />
     <input type="button" value="RESTAR" onclick="operaciones('restar'); return false;" /><br />
+    <input type="button" value="MULTIPLICAR" onclick="operaciones('multiplicar'); return false;" /><br />
+    <input type="button" value='DIVIDIR' onclick="operaciones('dividir'); return false; /><br />
 </form>
 
 </body>
